# open-codeql

./: .dockerignore  .gitignore  .gitmodules  Cargo.toml  Dockerfile  Makefile
crates/ocodeql/: Cargo.toml
crates/ocodeql/src/: main.rs
crates/ocodeql/src/commands/: analyze.rs  database.rs  mod.rs  parse.rs  query.rs
crates/ocql-common/: Cargo.toml
crates/ocql-common/src/: span.rs
crates/ocql-database/: Cargo.toml
crates/ocql-database/src/: database.rs  lib.rs  relation.rs  serialize.rs  string_interner.rs  value.rs
crates/ocql-e2e-tests/: Cargo.toml
crates/ocql-e2e-tests/tests/: e2e_tests.rs  java_parity.rs  oqlpack_java.rs  qlpack_probe.rs  qlpack_tests.rs  result_pipeline.rs  security_query.rs  trace_pipeline.rs  vendor_query.rs
crates/ocql-e2e-tests/tests/fixtures/: Shapes.java  Simple.java  basic.c  classes.c  dangerous_functions.ql  security.c
crates/ocql-e2e-tests/tests/fixtures/mini-qlpack/: FindFunctions.ql  Function.qll  FunctionsWithParams.ql  FunctionsWithoutParams.ql  LocalVariable.qll  mini.dbscheme  qlpack.yml
crates/ocql-engine/: Cargo.toml
crates/ocql-engine/src/: eval.rs  lib.rs  parse.rs  relops.rs  rule.rs  stratify.rs
crates/ocql-engine/tests/: c_analysis_tests.rs  indirect_call_tests.rs  parsed_rules_tests.rs  pointsto_tests.rs  query_extracted_db.rs
crates/ocql-engine/tests/fixtures/: callgraph.c  controlflow.c  dataflow.c  indirect_calls.c  pointsto.c
crates/ocql-eval/: Cargo.toml
crates/ocql-eval/src/: main.rs
crates/ocql-extractor-common/: Cargo.toml
crates/ocql-extractor-common/src/: emitter.rs  extractor.rs  lib.rs  location.rs  source_roots.rs  tree_sitter_utils.rs
crates/ocql-extractor-cpp/: Cargo.toml
crates/ocql-extractor-cpp/src/: extract.rs  lib.rs  schema.rs
crates/ocql-extractor-cpp/tests/: extraction_tests.rs  real_project_tests.rs
crates/ocql-extractor-cpp/tests/fixtures/: data_structures.c  edge_cases.cpp  enums_unions.cpp  extern_c.cpp  header_only.h  inheritance.cpp  modern_cpp.cpp  namespaces.cpp  operator_overloading.cpp  simple.c  simple.cpp  sqlite_like.c  templates.cpp
crates/ocql-extractor-csharp/: Cargo.toml
crates/ocql-extractor-csharp/src/: extract.rs  lib.rs  schema.rs
crates/ocql-extractor-csharp/tests/: real_project_tests.rs
crates/ocql-extractor-go/: Cargo.toml
crates/ocql-extractor-go/src/: extract.rs  lib.rs  schema.rs
crates/ocql-extractor-go/tests/: real_project_tests.rs
crates/ocql-extractor-go/tests/fixtures/: simple.go
crates/ocql-extractor-java/: Cargo.toml
crates/ocql-extractor-java/src/: bytecode.rs  bytecode_extract.rs  extract.rs  jdk.rs  lib.rs  schema.rs
crates/ocql-extractor-java/tests/: real_project_tests.rs
crates/ocql-extractor-java/tests/fixtures/: Annotations.java  Enums.java  Generics.java  Inheritance.java  Simple.java
crates/ocql-extractor-javascript/: Cargo.toml
crates/ocql-extractor-javascript/src/: extract.rs  lib.rs  schema.rs
crates/ocql-extractor-javascript/tests/: real_project_tests.rs
crates/ocql-extractor-javascript/tests/fixtures/: simple.js  simple.ts
crates/ocql-extractor-python/: Cargo.toml
crates/ocql-extractor-python/src/: extract.rs  lib.rs  schema.rs
crates/ocql-extractor-python/tests/: real_project_tests.rs
crates/ocql-extractor-python/tests/fixtures/: simple.py
crates/ocql-extractor-ruby/: Cargo.toml
crates/ocql-extractor-ruby/src/: extract.rs  lib.rs  schema.rs
crates/ocql-extractor-ruby/tests/: real_project_tests.rs
crates/ocql-extractor-ruby/tests/fixtures/: simple.rb
crates/ocql-extractor-rust/: Cargo.toml
crates/ocql-extractor-rust/src/: extract.rs  lib.rs  schema.rs
crates/ocql-extractor-rust/tests/: real_project_tests.rs
crates/ocql-extractor-rust/tests/fixtures/: simple.rs
crates/ocql-extractor-swift/: Cargo.toml
crates/ocql-extractor-swift/src/: extract.rs  lib.rs  schema.rs
crates/ocql-extractor-swift/tests/: real_project_tests.rs
crates/ocql-extractor-swift/tests/fixtures/: simple.swift
crates/ocql-hir/: Cargo.toml
crates/ocql-hir-eval/: Cargo.toml
crates/ocql-hir-eval/src/: main.rs
crates/ocql-hir/src/: builtins.rs  class_hierarchy.rs  collect.rs  def.rs  diagnostics.rs  lib.rs  module_graph.rs  namespace.rs  project.rs  resolve.rs  source.rs  types.rs
crates/ocql-lir/: Cargo.toml
crates/ocql-lir/src/: lib.rs  lower.rs  nodes.rs  pretty.rs
crates/ocql-lir/tests/: integration_tests.rs
crates/ocql-lsp/: Cargo.toml
crates/ocql-lsp/src/: main.rs
crates/ocql-mir/: Cargo.toml
crates/ocql-mir/src/: emit.rs  lib.rs  lower.rs  nodes.rs  sexpr.rs
crates/ocql-mir/tests/: lower_tests.rs  realworld_tests.rs
crates/ocql-models/: Cargo.toml
crates/ocql-models/src/: access_path.rs  database.rs  lib.rs  parse.rs  types.rs
crates/ocql-models/tests/: model_tests.rs
crates/ocql-ql-ast/: Cargo.toml
crates/ocql-ql-ast/src/: annotation.rs  expr.rs  formula.rs  lib.rs  module.rs  predicate.rs  query.rs  ty.rs
crates/ocql-ql-parser/: Cargo.toml
crates/ocql-ql-parser/src/: lexer.rs  lib.rs  ql.lalrpop
crates/ocql-result/: Cargo.toml
crates/ocql-result/src/: decode.rs  extract.rs  lib.rs  metadata.rs  obqrs.rs  result.rs
crates/ocql-schema/: Cargo.toml
crates/ocql-schema/src/: lib.rs  parse.rs  types.rs
docs/: README.md
docs/design/: README.md  dbscheme-reference.md  hir-design.md  implementation-plan.md  parallel-work-plan.md  ql-grammar.md  qlpack-compilation-gaps.md
docs/legacy/: INDEX.md  datalog-flow-engine.md  extractors.md  ir-pipeline.md  mir-specification.md  schema-alignment-report.md
docs/spec/: L0-concrete-syntax.md  L1-static-semantics.md  L2-core-ql.md  L3-evaluation.md  L4-database.md  L5-stdlib.md  README.md  conformance.md
docs/spec/extractors/: README.md  java.md
editors/vscode/: language-configuration.json  package-lock.json  package.json
examples/: callgraph.dl  dataflow.dl  find_functions.dl  graph.dl  hello.c  metrics.dl  pointers.c  pointsto.dl  unused_params.dl
scripts/: analyze_parse_errors.py  crawl_codeql_docs.py  turbofish_transform.py
tests/java-comparison/: README.md  run_comparison.sh
(+43 files in other folders)
