[workspace]
resolver = "2"
members = [
    "crates/ocql-common",
    "crates/ocql-ql-ast",
    "crates/ocql-ql-parser",
    "crates/ocql-eval",
    "crates/ocql-schema",
    "crates/ocql-database",
    "crates/ocql-extractor-common",
    "crates/ocql-extractor-cpp",
    "crates/ocql-hir",
    "crates/ocql-extractor-java",
    "crates/ocql-hir-eval",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
