[workspace]
resolver = "2"
members = [
    "crates/ocql-common",
    "crates/ocql-ql-ast",
    "crates/ocql-ql-parser",
    "crates/ocql-eval",
    "crates/ocql-schema",
    "crates/ocql-database",
    "crates/ocql-extractor-common",
    "crates/ocql-extractor-cpp",
    "crates/ocql-hir",
    "crates/ocql-extractor-java",
    "crates/ocql-extractor-ruby",
    "crates/ocql-hir-eval",
    "crates/ocql-engine",
    "crates/ocql-mir",
    "crates/ocql-models",
    "crates/ocql-extractor-csharp",
    "crates/ocql-extractor-go",
    "crates/ocql-extractor-rust",
    "crates/ocql-extractor-javascript",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
