[package]
name = "ocodeql"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "ocodeql"
path = "src/main.rs"

[dependencies]
ocql-schema = { path = "../ocql-schema" }
ocql-database = { path = "../ocql-database" }
ocql-engine = { path = "../ocql-engine" }
ocql-ql-parser = { path = "../ocql-ql-parser" }
ocql-hir = { path = "../ocql-hir" }
ocql-mir = { path = "../ocql-mir" }
ocql-models = { path = "../ocql-models" }
ocql-extractor-common = { path = "../ocql-extractor-common" }
ocql-extractor-cpp = { path = "../ocql-extractor-cpp" }
ocql-extractor-java = { path = "../ocql-extractor-java" }
ocql-ql-ast = { path = "../ocql-ql-ast" }
