[package]
name = "ocql-e2e-tests"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]

[dev-dependencies]
ocql-schema = { path = "../ocql-schema" }
ocql-database = { path = "../ocql-database" }
ocql-engine = { path = "../ocql-engine" }
ocql-ql-parser = { path = "../ocql-ql-parser" }
ocql-mir = { path = "../ocql-mir" }
ocql-lir = { path = "../ocql-lir" }
ocql-extractor-common = { path = "../ocql-extractor-common" }
ocql-extractor-cpp = { path = "../ocql-extractor-cpp" }
ocql-extractor-java = { path = "../ocql-extractor-java" }
