[package]
name = "ocql-extractor-go"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ocql-database = { path = "../ocql-database" }
ocql-schema = { path = "../ocql-schema" }
ocql-extractor-common = { path = "../ocql-extractor-common" }
tree-sitter = "0.26"
tree-sitter-go = "0.25"

[[bin]]
name = "extract-go"
path = "src/bin/extract.rs"
