[package]
name = "ocql-extractor-rust"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ocql-database = { path = "../ocql-database" }
ocql-schema = { path = "../ocql-schema" }
ocql-extractor-common = { path = "../ocql-extractor-common" }
tree-sitter = "0.26"
tree-sitter-rust = "0.24"

[[bin]]
name = "extract-rust"
path = "src/bin/extract.rs"
