[package]
name = "ocql-lir"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "ocql-lir-eval"
path = "src/bin/eval.rs"

[dependencies]
ocql-ql-parser = { path = "../ocql-ql-parser" }
ocql-mir = { path = "../ocql-mir" }
ocql-database = { path = "../ocql-database" }
ordered-float = "4"

