[package]
name = "ocql-lsp"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "ocql-lsp"
path = "src/main.rs"

[dependencies]
ocql-ql-parser = { path = "../ocql-ql-parser" }
lalrpop-util = "0.23.0"
lsp-server = "0.7"
lsp-types = "0.97"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
