[package]
name = "ocql-mir"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "ocql-mir-eval"
path = "src/bin/eval.rs"

[dependencies]
ocql-ql-ast = { path = "../ocql-ql-ast" }
ocql-ql-parser = { path = "../ocql-ql-parser" }
ocql-engine = { path = "../ocql-engine" }
ocql-database = { path = "../ocql-database" }
ordered-float = "4"

[dev-dependencies]
ocql-extractor-common = { path = "../ocql-extractor-common" }
ocql-extractor-cpp = { path = "../ocql-extractor-cpp" }
