[package]
name = "ocql-models"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ocql-database = { path = "../ocql-database" }
ocql-schema = { path = "../ocql-schema" }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"

[dev-dependencies]
ocql-engine = { path = "../ocql-engine" }
